[package]
name = "rusty-zenith"
version = "0.1.0"
authors = ["BananaPuncher714 <banana@aaaaahhhhhhh.com>"]
edition = "2021"

[dependencies]
base64 = "0.13.1"
hex = "0.4.3"
httparse = "1.8.0"
httpdate = "1.0.3"
path-clean = "0.1.0"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tokio-native-tls = "0.3.1"
url = "2.5.0"
urlencoding = "1.3.3"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
